# circular-rust-go

./: README.md
dhl/: getlabel.go  shipmodule.h
shipmodule/: .build.rs.swp  Cargo.toml  build.rs
shipmodule/interfaces/: shipmodule.h
shipmodule/src/: lib.rs  main.rs
